# BSpline

./: CMakeLists.txt
include/: BSplineTrajectory.hpp
src/: main.cpp
